<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".signup.RegisterFragment">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.4" />

    <LinearLayout
        android:id="@+id/linear_layout_superior"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="#dfb9dc"
        android:orientation="vertical"
        android:padding="16dp"
        app:layout_constraintBottom_toTopOf="@+id/guideline"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageButton
            android:id="@+id/btnBack"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_marginTop="16dp"
            android:src="@drawable/ic_back_arrow"
            android:scaleType="fitCenter"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:contentDescription="@string/bot_n_para_volver" />

        <ImageView
            android:id="@+id/imageViewLogo"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:layout_marginTop="16dp"
            android:src="@drawable/icon_read" />

        <TextView
            android:id="@+id/tvTitleRegister"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/bienvenido"
            android:textColor="#673775"
            android:textSize="32sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tvSubtitleRegister"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/reg_strate_para_continuar"
            android:textColor="#673775"
            android:textSize="18sp" />
    </LinearLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/emailTil"
        style="@style/passwordTil"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        app:layout_constraintTop_toBottomOf="@id/guideline"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/emailTiet"
            style="@style/passwordTiet"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/correo_electr_nico"
            android:inputType="textEmailAddress" />

    </com.google.android.material.textfield.TextInputLayout>

    <!-- PASSWORD -->
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/passwordTil"
        style="@style/passwordTil"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintTop_toBottomOf="@id/emailTil"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/passwordTiet"
            style="@style/passwordTiet"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/contrase_a"
            android:inputType="textPassword" />

    </com.google.android.material.textfield.TextInputLayout>

    <!-- CONFIRM PASSWORD -->
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/confirmPasswordTil"
        style="@style/passwordTil"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintTop_toBottomOf="@id/passwordTil"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/confirmPasswordTiet"
            style="@style/passwordTiet"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/confirmar_contrase_a"
            android:inputType="textPassword" />

    </com.google.android.material.textfield.TextInputLayout>

    <!-- BOTÓN -->
    <com.google.android.material.button.MaterialButton
        android:id="@+id/signInButton"
        style="@style/signUpButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:text="@string/registrar"
        app:layout_constraintTop_toBottomOf="@id/confirmPasswordTil"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/registerText"
        style="@style/signInLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="15dp"
        android:text="@string/ya_tienes_cuenta_inicia_sesi_n"
        android:textColor="#E94B84"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>